Allow to automatically delete previous draftby reference
