# lib/api/messages.js
@@ -34,7 +34,6 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
 
     const putMessage = util.promisify(messageHandler.put.bind(messageHandler));
     const updateMessage = util.promisify(messageHandler.update.bind(messageHandler));
-    const deleteMessage = util.promisify(messageHandler.del.bind(messageHandler));
 
     const encryptMessage = util.promisify(messageHandler.encryptMessage.bind(messageHandler));
 
@@ -1459,7 +1458,7 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
             }
 
             try {
-                await deleteMessage({
+                await messageHandler.delAsync({
                     user,
                     mailbox: { user, mailbox },
                     messageData,
@@ -1559,7 +1558,7 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
                     }
 
                     try {
-                        await deleteMessage({
+                        await messageHandler.delAsync({
                             user,
                             mailbox: { user, mailbox },
                             messageData,
@@ -1691,6 +1690,11 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
                     )
                 }),
 
+                replacePrevious: Joi.object({
+                    mailbox: Joi.string().hex().lowercase().length(24),
+                    id: Joi.number().required()
+                }),
+
                 sess: sessSchema,
                 ip: sessIPSchema
             });
@@ -1759,6 +1763,8 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
             let date = result.value.date || new Date();
             let files = [];
 
+            let replacePrevious = result.value.replacePrevious;
+
             let mailboxData;
             try {
                 mailboxData = await db.database.collection('mailboxes').findOne({
@@ -1773,6 +1779,7 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
                 });
                 return next();
             }
+
             if (!mailboxData) {
                 res.status(404);
                 res.json({
@@ -1795,6 +1802,7 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
                 });
                 return next();
             }
+
             if (!userData) {
                 res.status(404);
                 res.json({
@@ -1975,7 +1983,7 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
                 return next();
             }
 
-            res.json({
+            let response = {
                 success: status,
                 message: messageData
                     ? {
@@ -1983,7 +1991,47 @@ module.exports = (db, server, messageHandler, userHandler, storageHandler, setti
                           mailbox: messageData.mailbox
                       }
                     : false
-            });
+            };
+
+            if (replacePrevious) {
+                // delete previous version of the message
+                let previousMessageMailbox = replacePrevious.mailbox ? new ObjectId(replacePrevious.mailbox) : mailboxData._id;
+                let previousMessage = replacePrevious.id;
+
+                let previousMessageData;
+                try {
+                    previousMessageData = await db.database.collection('messages').findOne({
+                        mailbox: previousMessageMailbox,
+                        uid: previousMessage
+                    });
+
+                    if (!previousMessageData || previousMessageData.user.toString() !== user.toString()) {
+                        throw new Error('Message was not found');
+                    }
+
+                    response.previousDeleted = await messageHandler.delAsync({
+                        user,
+                        mailbox: {
+                            user,
+                            mailbox: previousMessageMailbox
+                        },
+                        messageData: previousMessageData,
+                        archive: !previousMessageData.flags.includes('\\Draft')
+                    });
+                } catch (err) {
+                    response.previousDeleteError = 'Failed to delete previous message. ' + err.message;
+
+                    log.error(
+                        'API',
+                        'action=add-message message=%s previous=%s error=%s',
+                        messageData._id,
+                        previousMessage,
+                        'Failed to delete previous message. ' + err.message
+                    );
+                }
+            }
+
+            res.json(response);
             return next();
         })
     );
